[feat] improved emoji decoding
[feat] improved emoji decoding

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ httpx = "*"
 textual = "*"
 textual-image = {extras = ["textual"], version = "*"}
 pillow = "*"
+rich = "*"
 emoji = "*"
 
 [dev-packages]
